k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-texting
spec:
  selector:
    app: secure-texting
  ports:
    - port: 80
      targetPort: 8000
